# Non-Matrix

./: CELL_SETTINGS_DEEP_DIVE.md  README.md  pyproject.toml
plans/: phase1_build_plan.md
src/non_matrix/: __init__.py  app.py  cell.py  modes.py  rules.py  seeding.py  signal_coherence.py  simulation.py  sparse_grid.py  viewport.py
tests/: test_app.py  test_cell.py  test_rules_life.py  test_seeding.py  test_sparse_grid.py
