[project]
name = "non-matrix"
version = "0.1.0"
description = "Sparse-grid cellular intelligence engine prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
non-matrix = "non_matrix.app:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

